[package]
name = "simple_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mlua = { version = "0.11", features = ["lua54", "serialize", "vendored"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false